added map exporting and importing

--- a/public/index.html
+++ b/public/index.html
@@ -409,6 +409,12 @@
                 </select>
             </div>
         </div>
+
+        <div id="saveStateMenu" class="saveStateMenu hidden">
+            <button id="exportMapButton" class="exportMapButton">Export Map</button>
+            <label id="importMapButton" for="importMapFileDrop" class="exportMapButton fileDropAutofill">Import Map</label>
+            <input id="importMapFileDrop" type="file" class="hiddenFileDrop">
+        </div>
     </div>
 
     <!-- Has buttons and widgets for editing character sheets, creating/joining lobbies, and other stuff like settings -->
