added leave confirmation

--- a/public/index.html
+++ b/public/index.html
@@ -416,6 +416,7 @@
             <label id="importMapButton" for="importMapFileDrop" class="exportMapButton fileDropAutofill centerFlexAlign">Import Map</label>
             <input id="importMapFileDrop" type="file" class="hiddenFileDrop">
             <h1 class="saveStateMenuHeader">Saved Objects</h1>
+            <button id="wipeSaveStatesButton" class="exportMapButton centerFlexAlign">Clear Unused Objects</button>
             <div id="saveStateObjectHoldingMenu"></div>
         </div>
     </div>
