snapping and hex

--- a/public/index.html
+++ b/public/index.html
@@ -349,8 +349,11 @@
                 <label class="objectMenuLabel" for="tokenZIndexInput">Z-Index</label>
                 <input class="objectMenuInput" id="tokenZIndexInput" placeholder="0">
 
-                <label class="objectMenuLabel" for="tokenGridSnapInput">Grid Snap Interval (px)</label>
-                <input class="objectMenuInput" id="tokenGridSnapInput" placeholder="1">
+                <label class="objectMenuLabel" for="tokenGridSnapInput">Grid Snapping</label>
+                <select class="objectMenuInput" id="tokenGridSnapInput">
+                    <option value="1">Enabled</option>
+                    <option value="0">Disabled</option>
+                </select>
 
                 <label class="objectMenuLabel" for="tokenColorInput">Token Base Color</label>
                 <select class="objectMenuInput colorInputAutofill" id="tokenColorInput"></select>
@@ -400,6 +403,12 @@
 
                 <label class="objectMenuLabel" for="gridZIndexInput">Z-Index</label>
                 <input class="objectMenuInput" id="gridZIndexInput" placeholder="0">
+
+                <label class="objectMenuLabel" for="gridEnableCountInput">Measure Distance</label>
+                <select class="objectMenuInput" id="gridEnableCountInput">
+                    <option value="1">Enabled</option>
+                    <option value="0">Disabled</option>
+                </select>
 
                 <label class="objectMenuLabel" for="gridShapeInput">Grid Shape</label>
                 <select class="objectMenuInput" id="gridShapeInput">
