added token previews

--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
         <canvas id="gameCanvas"></canvas>
         <canvas id="buildCanvas"></canvas>
         <div id="tokenDataMenu" class="objectDataMenu hidden">
-            <canvas class="objectShowcaseView"></canvas>
+            <canvas class="objectShowcaseView" id="tokenShowcaseView"></canvas>
             <button class="objectMenuDelete" id="deleteTokenButton">Delete Token</button>
             <div class="objectMenuDataProperties">
                 <label class="objectMenuLabel" for="tokenNameInput">Token Name</label>
