Added Grid Showcases

--- a/public/index.html
+++ b/public/index.html
@@ -371,7 +371,7 @@
         </div>
 
         <div id="gridDataMenu" class="objectDataMenu hidden">
-            <canvas class="objectShowcaseView"></canvas>
+            <canvas class="objectShowcaseView" id="gridShowcaseView"></canvas>
             <button class="objectMenuDelete" id="deleteGridButton">Delete Grid</button>
             <div class="objectMenuDataProperties">
                 <label class="objectMenuLabel" for="gridNameInput">Grid Name</label>
